@@ -1,5 +1,17 @@
 2017-09-29  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/background/try_xpath_background.js: 
+	Modify genericListener.listeners.requestRestorePopupState to send
+	message	even if popupState is null.
+	
+	* tryXpath/popup/popup.js:
+	Modify genericListener.listeners.restorePopupState to handle the
+	case that message.state is null.
+
+
+	* tryXpath/popup/popup.html (Main):
+	Remove none class.
+
 	* tryXpath/popup/popup.js:
 	Modify this file. Some elements are linked to some checkboxes.
 
